<resources>
    <string name="app_name">LittlePantry</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="log_in_label">Log in</string>
    <string name="register_label">Register</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="reg_form_fragment_label">Registration Form</string>
    <string name="register_user_profile_fragment_label">Register user profile</string>
    <string name="posts_fragment_label">Posts</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_username">Username</string>
    <string name="button_create_account">Create account</string>
    <string name="login_error_user_not_exist">This email is not registered.</string>
    <string name="login_error_user_already_exist">This email is already registered.</string>
    <string name="login_error_unknown">An error occurred. Please, try again later.</string>
    <string name="login_malformed_email">Invalid email format</string>
    <string name="login_wrong_password">Invalid password</string>
    <string name="login_error_missing_email">Please, fill in the email address.</string>
    <string name="login_error_missing_password">Please, fill in the password.</string>
    <string name="profile_label">Profile</string>
    <string name="log_out_label">Log out</string>
    <string name="auth_activity_graph_label">AuthActivity</string>
    <string name="snackbar_lost_connection_message">It seems you\'ve lost Internet connection</string>
    <string name="forgotten_password_label">Forgotten password</string>
    <string name="sign_up_label">Sign up</string>
    <string name="login_header_fragment_label">Login Header Fragment</string>
    <string name="registration_header_fragment_label">Registration Header Fragment</string>
    <string name="update_profile_button">Update profile picture</string>
    <string name="upload_profile_photo_label">Upload profile photo</string>
    <string name="cd_take_picture">Take picture</string>
    <string name="cd_upload_picture_from_gallery">Upload picture from gallery</string>
    <string name="error_processing_profile_picture">Something went wrong. Please try again</string>
    <string name="unsupported_picture_format">Unsupported picture format</string>
    <string name="cd_app_logo">App Logo</string>
    <string name="cd_rotate_profile_picture_left">Rotate profile picture left</string>
    <string name="cd_rotate_profile_picture_right">Rotate profile picture right</string>
    <string name="registration_step_one">Account Info</string>
    <string name="registration_step_two">Profile picture</string>
    <string name="registration_step_three">Contact info</string>
    <string name="register_user_contact_info_fragment_label">Contact Information</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address_line">Address line</string>
    <string name="hint_city">City</string>
    <string name="hint_zip_code">ZIP code</string>
    <string name="hint_country">Country</string>
    <string name="btn_update_contact_info_label">Update contact info</string>
    <string name="country_gb">The United Kingdom</string>
    <string name="country_svk">Slovakia</string>
    <string name="inbox_label">Inbox</string>
    <string name="profile_fragment_label">Your profile</string>
    <string name="my_posts_label">My Posts</string>
    <string name="gallery_intent_could_not_load_image">The picture could not be loaded.</string>

</resources>
