<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.fragments.UserContactInfoFragment">

    <com.shuhart.stepview.StepView
        android:id="@+id/sv_registration_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="@dimen/medium_margin"
        android:paddingTop="48dp"
        android:paddingEnd="@dimen/medium_margin"
        android:paddingBottom="@dimen/extra_large_margin"
        android:transitionName="header_step_view"
        app:layout_constraintTop_toTopOf="parent"
        app:sv_animationDuration="300"
        app:sv_animationType="All"
        app:sv_doneCircleColor="@color/colorAccent"
        app:sv_doneCircleRadius="12dp"
        app:sv_doneStepLineColor="@color/colorAccent"
        app:sv_doneStepMarkColor="@android:color/white"
        app:sv_doneTextColor="@color/grey"
        app:sv_nextStepCircleEnabled="true"
        app:sv_nextStepLineColor="@color/grey"
        app:sv_nextTextColor="@color/grey"
        app:sv_selectedCircleColor="@color/colorAccent"
        app:sv_selectedCircleRadius="12dp"
        app:sv_selectedStepNumberColor="@android:color/white"
        app:sv_selectedTextColor="@color/colorAccent"
        app:sv_stepLineWidth="2dp"
        app:sv_stepNumberTextSize="12sp"
        app:sv_stepPadding="4dp"
        app:sv_stepViewStyle="@style/StepView"
        app:sv_stepsNumber="3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:hint="@string/hint_email"
        app:layout_constraintTop_toBottomOf="@id/sv_registration_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="jane.doe@yahoo.co.uk" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_phone_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:hint="@string/hint_phone_number"
        app:layout_constraintTop_toBottomOf="@id/tl_email_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="+447873780183" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_address_line"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:hint="@string/hint_address_line"
        app:layout_constraintTop_toBottomOf="@id/tl_phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_address_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="One Canada Square" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_city"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:hint="@string/hint_city"
        app:layout_constraintTop_toBottomOf="@id/tl_address_line">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="London" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_zip_code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:hint="@string/hint_zip_code"
        app:layout_constraintTop_toBottomOf="@id/tl_city">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_zip_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="E14 5AB" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_country"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:hint="@string/hint_country"
        app:layout_constraintTop_toBottomOf="@id/tl_zip_code">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="The United Kingdom" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btn_update_contact_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:background="@drawable/btn_background"
        android:gravity="center"
        android:padding="@dimen/margin_small"
        android:text="@string/btn_update_contact_info_label"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>