<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="48dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.fragments.RegisterUserProfileFragment">

    <com.shuhart.stepview.StepView
        android:id="@+id/sv_registration_header"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/medium_margin"
        android:paddingEnd="@dimen/medium_margin"
        app:sv_stepsNumber="3"
        app:sv_selectedCircleColor="@color/colorAccent"
        app:sv_selectedTextColor="@color/colorAccent"
        app:sv_stepLineWidth="2dp"
        app:sv_stepPadding="4dp"
        app:sv_nextTextColor="@color/grey"
        app:sv_nextStepLineColor="@color/grey"
        app:sv_nextStepCircleEnabled="true"
        app:sv_doneCircleColor="@color/colorAccent"
        app:sv_doneStepLineColor="@color/colorAccent"
        app:sv_doneStepMarkColor="@android:color/white"
        app:sv_doneCircleRadius="12dp"
        app:sv_selectedCircleRadius="12dp"
        app:sv_selectedStepNumberColor="@android:color/white"
        app:sv_stepViewStyle="@style/StepView"
        app:sv_stepNumberTextSize="12sp"
        app:sv_animationType="All"
        app:sv_animationDuration="300"
        android:paddingBottom="@dimen/extra_large_margin"
        app:layout_constraintTop_toTopOf="parent"
        android:transitionName="header_step_view"/>

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/civ_profile_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_blank_profile"
        app:layout_constraintTop_toBottomOf="@id/sv_registration_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:civ_border="true"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="2dp"/>

    <TextView
        android:id="@+id/tv_upload_photo_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_profile_photo_label"
        android:textColor="@color/colorAccent"
        android:visibility="gone"
        android:layout_margin="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/civ_profile_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/upload_options"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/tv_upload_photo_label"
        app:layout_constraintEnd_toEndOf="@id/civ_profile_photo">

        <ImageView
            android:id="@+id/iv_take_picture"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:src="@drawable/ic_photo_camera"
            android:contentDescription="@string/cd_take_picture" />

        <ImageView
            android:id="@+id/iv_select_picture"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:src="@drawable/ic_photo_library"
            android:contentDescription="@string/cd_upload_picture_from_gallery" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_update_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:background="@drawable/btn_background"
        android:gravity="center"
        android:padding="@dimen/margin_small"
        android:text="@string/update_profile_button"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>